--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ php:
   - '7.2'
 before_script:
   - composer install
-script: phpunit ---configuration phpunit.xml --converage-text
+script: phpunit --configuration phpunit.xml --converage-text
