--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,13 @@ language: php
 php:
   - '7.2'
 before_script:
-  - composer install
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
 script: phpunit --configuration phpunit.xml --coverage-text
+notifications:
+  on_success: never
+  on_failure: always
+Your code is like shit, You should resolve it immediately
+#env:
+#  TESTFOLDER = tests/controllers
+#  TESTFOLDER = tests/validation
