--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 script: phpunit --configuration phpunit.xml --coverage-text
 notifications:
-  on_success: never
-  on_failure: always
-Your code is like shit, You should resolve it immediately
+  email:
+    on_success: never
+    on_failure: always
 env:
-  TESTFOLDER = tests/controllers
-  TESTFOLDER = tests/validation
+  - TESTFOLDER = tests/controllers
+  - TESTFOLDER = tests/validation
