--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,14 @@ before_script:
 script: phpunit --configuration phpunit.xml --coverage-text
 notifications:
   email:
-    on_success: never
+    on_success: always
+    on_failure: always
+  slack:
+    rooms:
+      - wilokegroup:1bS7SWI4jj1Jy9Krr3RSHIwd#general
+      - wilokegroup:1bS7SWI4jj1Jy9Krr3RSHIwd#random
+      - wilokegroup:1bS7SWI4jj1Jy9Krr3RSHIwd#hsblog
+    on_success: always
     on_failure: always
 env:
   - TESTFOLDER = tests/controllers
