--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
+  - mysql -e 'Create Table If Not Exists tests;'
 script: phpunit --configuration phpunit.xml --coverage-text
 notifications:
   email:
@@ -18,6 +19,8 @@ notifications:
     template:
       - "%{repository_slug} (%{commit}) : %{message}"
       - "Build details: %{build_url}"
+services:
+  - mysql
 #env:
 #  - TESTFOLDER = tests/controllers
 #  - TESTFOLDER = tests/validation
